@@ -76,6 +76,7 @@ AC_SUBST(GTKMM_CFLAGS)
 AC_CONFIG_FILES([
 Makefile
 compose/Makefile
+doc/Makefile
 include/Makefile
 src/Makefile
 pixmaps/Makefile
