@@ -1,0 +1,3 @@
+## Process this file with automake to produce Makefile.in
+
+dist_man_MANS = gparted.8
