@@ -1,3 +1,12 @@
+2008-04-14  Curtis Gedak  <gedakc@gmail.com>
+
+	* Makefile.am,
+	  configure.in,
+	  doc/,
+	  doc/Makefile.am,
+	  doc/gparted.8: Added manual page documentation
+	  - Command line response for GParted bug #329584
+
 2008-04-09  Curtis Gedak  <gedakc@gmail.com>
 
 	* gparted.desktop.in: Updated to align with standards
